--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "redux-devtools": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
